--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -1,7 +1,14 @@
 - name: Install haproxy
   apt: 
     name: haproxy
+  when: ansible_distribution == 'Ubuntu'
 
+- name: Install haproxy
+  yum: 
+    name: haproxy
+  when: ansible_distribution == 'CentOS'
+
+  
 - name: Start haproxy
   service:
     name: haproxy
