--- a/haproxy.yml
+++ b/haproxy.yml
@@ -1,23 +1,15 @@
-# 本地同步公共Roles
-
-# 服务器前置任务(ubuntu使用)
+# 核心任务
 - name: haproxy
   hosts: all
   become: yes
   become_method: sudo
-  gather_facts: False
-  pre_tasks:
-   - name: Install Python
-     raw: sudo apt update && sudo apt-get -y install python
 
-
-# # 核心任务
-
-- name: haproxy
-  hosts: all
-  become: yes
-  become_method: sudo
+  vars_files:
+    - /vars/main.yml
 
   roles:
-    - { role: common, tags: "common"}  
+    - { role: role_common, tags: "role_common"}  
+    - { role: role_cloud, tags: "role_cloud" }
     - { role: haproxy, tags: "haproxy"}
+    - { role: role_preend, tags: "preend" }
+    - { role: role_end, tags: "role_end" }
