--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,9 @@
 - src: http://github.com/websoft9dev/role_cloud
   version: master
 
+- src: http://github.com/websoft9dev/role_haproxy
+  version: master
+
 - src: http://github.com/websoft9dev/role_preend
   version: master
 
