--- a/requirements.yml
+++ b/requirements.yml
@@ -6,6 +6,9 @@
 
 - src: http://github.com/websoft9dev/role_haproxy
   version: master
+  
+- src: http://github.com/websoft9dev/role_init_password
+  version: master
 
 - src: http://github.com/websoft9dev/role_preend
   version: master
