--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,4 +4,4 @@ init_application:
     password: "123456"
     service_before: haproxy.service
     config_paths: 
-      - /data/wwwroot/wordpress/wp-config.php
+      - /etc/haproxy/haproxy.cfg
