--- a/haproxy.yml
+++ b/haproxy.yml
@@ -11,7 +11,7 @@
       prompt: "Choose the HAProxy distribution: \n
       1: HAProxy 1.7\n
       2: HAProxy 1.8\n
-      3: HAProxy 1.9\n
+      3: HAProxy 1.9(only centos)\n
       4: HAProxy 2.0\n
       5: HAProxy 2.1\n
       6: HAProxy 2.2\n"
