--- a/haproxy.yml
+++ b/haproxy.yml
@@ -14,7 +14,7 @@
       3: HAProxy 2.0\n
       4: HAProxy 2.1\n
       5: HAProxy 2.2\n
-      6: HAProxy 2.3\n"
+      6: HAProxy 2.3(only support ubuntu20.04 and centos7)\n"
       private: no
       default: 1
 
