--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,11 @@
-- src: http://github.com/websoft9dev/role_common
+- src: http://github.com/websoft9/role_common
 
-- src: http://github.com/websoft9dev/role_cloud
+- src: http://github.com/websoft9/role_cloud
 
-- src: http://github.com/websoft9dev/role_haproxy
+- src: http://github.com/websoft9/role_haproxy
   
-- src: http://github.com/websoft9dev/role_init
+- src: http://github.com/websoft9/role_init
 
-- src: http://github.com/websoft9dev/role_preend
+- src: http://github.com/websoft9/role_preend
 
-- src: http://github.com/websoft9dev/role_end
+- src: http://github.com/websoft9/role_end
