--- a/haproxy.yml
+++ b/haproxy.yml
@@ -9,8 +9,8 @@
   vars_prompt:
     - name: 'haproxy_selection'
       prompt: "Choose the HAProxy distribution: \n
-      1: HAProxy 1.7\n
-      2: HAProxy 1.8\n
+      1: HAProxy 1.7\n(ont support ubuntu20.04)
+      2: HAProxy 1.8\n(ont support ubuntu20.04)
       3: HAProxy 2.0\n
       4: HAProxy 2.1\n
       5: HAProxy 2.2\n
