--- a/haproxy.yml
+++ b/haproxy.yml
@@ -14,7 +14,8 @@
       3: HAProxy 2.0\n
       4: HAProxy 2.1\n
       5: HAProxy 2.2\n
-      6: HAProxy 2.3(only support ubuntu20.04 and centos7)\n"
+      6: HAProxy 2.3(only support ubuntu20.04 and centos7)\n
+      7: HAProxy 2.4\n"
       private: no
       default: 1
 
@@ -26,6 +27,7 @@
       '4': "2.1"
       '5': "2.2"
       '6': "2.3"
+      '7': "2.4"
 
     haproxy_version: "{{haproxy_select[haproxy_selection]}}"
 
