--- a/haproxy.yml
+++ b/haproxy.yml
@@ -15,7 +15,7 @@
       4: HAProxy 2.1\n
       5: HAProxy 2.2\n
       6: HAProxy 2.3(only support ubuntu20.04 and centos7)\n
-      7: HAProxy 2.4"
+      7: HAProxy 2.4\n
       8: HAProxy 2.5\n"
       private: no
       default: 1
